Ensure heading is centred when viewing the calendar on small devices and responsive mode is enabled. Ref 296.

--- a/css/fullcalendar.css
+++ b/css/fullcalendar.css
@@ -81,6 +81,10 @@
 	.eo-fullcalendar-responsive .fc-day-button{
 		display:none;
 	}
+	
+	.eo-fullcalendar-responsive .fc-toolbar h2 {
+		text-align:center;
+	}
 }
 
 /*Added to fit with full calendar*/
